libaio (0.3.110-3) UNRELEASED; urgency=medium

  * Use https for hadrons.org and debian.org URLs.
  * Switch debug package to a ddeb.

 -- Guillem Jover <guillem@debian.org>  Sat, 05 Dec 2015 16:44:05 +0100

libaio (0.3.110-2) unstable; urgency=medium

  * Use https for the debian/copyright Format URL.
  * Switch Vcs-Browser to a cgit URL.
  * Update Homepage URL to new release site.
    Prompted by Sedat Dilek <sedat.dilek@gmail.com>.
  * Use https in debian/watch URL.
  * Add a small note on each long package description explaining what is
    contained on each package.
  * Document each patch.

 -- Guillem Jover <guillem@debian.org>  Tue, 29 Sep 2015 16:48:30 +0200

libaio (0.3.110-1) unstable; urgency=low

  * New upstream release.
    - Refresh patches.
  * Link against -lc and -Wl,--as-needed so that we pull the required
    fortified functions from the internal libc_nonshared.a, but do not link
    against the shared library because we do not use any of its symbols.
    (Closes: #764509)
  * Switch debian/copyright to machine-readable format 1.0.
  * Now using Standards-Version 3.9.6 (no changes needed).
  * Switch to debhelper compatibility level 9.
  * Fix mips/mipsel syscall wrappers to return correct error values.
    Thanks to Jurica Stanojkovic <Jurica.Stanojkovic@rt-rk.com>.
  * Add mips64 support. Reported by Jeremy Fitzhardinge <jeremy@exablox.com>.

 -- Guillem Jover <guillem@debian.org>  Thu, 09 Oct 2014 05:44:48 +0200

libaio (0.3.109-4) unstable; urgency=low

  * Now using Standards-Version 3.9.4 (no changes needed).
  * Remove package creation information from debian/copyright.
  * Update upstream git URL in debian/copyright.
  * Add support for x32 (from the Yocto project). (Closes: #702183)
    Thanks to Daniel Schepler <dschepler@gmail.com>.
  * Add support for arm64 (stolen from upstream). (Closes: #702409)
    Thanks to Ian Campbell <ijc@hellion.org.uk>.
  * Add cross-compilation support.