@@ -3,17 +3,13 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-DEB_BUILD_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
-DEB_HOST_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
-DEB_HOST_ARCH_CPU ?= $(shell dpkg-architecture -qDEB_HOST_ARCH_CPU)
-DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
+DEB_CFLAGS_MAINT_PREPEND = -Wall
+
+include /usr/share/dpkg/default.mk
 
 ifneq ($(DEB_BUILD_GNU_TYPE),$(DEB_HOST_GNU_TYPE))
 export CC = $(DEB_HOST_GNU_TYPE)-gcc
 endif
-CPPFLAGS = $(shell dpkg-buildflags --get CPPFLAGS)
-CFLAGS = $(shell dpkg-buildflags --get CFLAGS) -Wall
-LDFLAGS = $(shell dpkg-buildflags --get LDFLAGS)
 
 lib := libaio1
 libdbg := $(lib)-dbg
